Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-140166

Order of member descriptions does not match order of list

XMLWordPrintable

    • 1fc041b79 (dev)

      The order of members in the Public Functions lists of some classes do not match the order in which they appear in the Member Function Documentation. An example of this is QString, where the constructors appear first in the list, but their sections actually follow those for other members:

      https://doc.qt.io/qt-6/qstring.html

      The cause of this appears to be the way that nodes are sorted by QDoc when preparing the detailed sections for the HTML output. Because nodes are sorted by name, shared comment nodes without their own names will appear before named nodes. The solution is to sort based on the first child node of shared comment nodes.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            david.boddie David Boddie
            david.boddie David Boddie
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change