QDoc: Include the first child nodes of shared nodes in sort comparisons

By including the first child nodes of shared nodes, we make the order of
detailed member sections more closely resemble the order of members in
the summary lists at the start of each page.

Fixes: QTBUG-140166
Pick-to: 6.10
Change-Id: I4e15f7ccc20fa579e2a6e35384bacacfa2245eb3
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>